<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:text="@string/temperature_converter___"
        android:textSize="29sp"
        android:textStyle="bold"
        android:layout_marginStart="59sp"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/enterTemp"
        android:layout_width="270dp"
        android:ems="10"
        android:layout_marginTop="27sp"
        android:layout_gravity="center"
        android:hint="@string/enter_the_value__"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        tools:ignore="TextViewEdits"
        android:autofillHints="" />

    <Button
        android:id="@+id/cToF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cel_to_heit_"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_marginTop="45dp"
        />

    <Button
        android:id="@+id/fToC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heit_to_cel_"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="45dp"
        android:text="@string/_0_degrees__"
        android:textAlignment="center"
        android:textSize="22sp" />


</LinearLayout>
