<?xml version="1.0" encoding="utf-8"?>
<const xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button1"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="200sp"
        android:text="@string/length_d"
        android:textSize="25sp"
        android:background="@color/black"
        android:backgroundTint="@color/black"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="200sp"
        android:text="@string/mass"
        android:textSize="25sp"
        android:backgroundTint="#AC1616"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="-328dp"
        android:layout_marginTop="360sp"
        android:text="@string/area"
        android:textSize="25sp"
        tools:ignore="ButtonStyle" />

    <Button
        android:id="@+id/button4"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="365sp"
        android:text="@string/volume"
        android:textSize="25sp"
        tools:ignore="ButtonStyle" />

<TextView
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:text="hello how are you"/>

</const>